[tool.poetry]
name = "pandas-ta"
version = "0.3.15"
description = "Pandas TA - A Technical Analysis Library in Python 3"
authors = ["navendugarg <navendugarg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.2.2"
pytz = "^2024.1"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["pandas_ta"]
package_dir = {"" = "pandas_ta"}